--- a/contact.html
+++ b/contact.html
@@ -171,9 +171,9 @@
           <i class="bi bi-geo-alt icon"></i>
           <div class="address">
             <h4>Address</h4>
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p></p>
+            <p>91 St. Finnbars Road ,</p>
+            <p>Akoka, Yaba ,</p>
+            <p>Lagos State, Nigeria</p>
           </div>
 
         </div>
@@ -182,10 +182,9 @@
           <i class="bi bi-telephone icon"></i>
           <div>
             <h4>Contact</h4>
-            <p>
-              <strong>Phone:</strong> <span>+1 5589 55488 55</span><br>
-              <strong>Email:</strong> <span>info@example.com</span><br>
-            </p>
+            <p><strong>Phone:</strong> <span>08101353450, 08101631008</span></p>
+            <p><strong>Email:</strong> <span>sunplanetcompanyltd@gmail.com</span></p>
+
           </div>
         </div>
 
@@ -214,20 +213,20 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">EstateAgency</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Sun Planet Company</strong> <br> <span>All Rights
+          Reserved</span>
+      </p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+
+        Powered by <a href="#">Royal Reality Technology</a>
       </div>
     </div>
 
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="https://wa.me/+2348101631008" id="scroll-top"
+    class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
