--- a/properties.html
+++ b/properties.html
@@ -41,7 +41,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#" >Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li class="dropdown"><a href="#"><span>Investment</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -50,7 +50,7 @@
               <li><a href="#">Investments</a></li>
             </ul>
           </li>
-          <li><a href="properties.html">Properties</a></li>
+          <li><a href="properties.html" class="active">Properties</a></li>
 
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
